[package]
name = "rabin-williams"
version = "0.0.1"
authors = ["Marcin Górny", "mmagician <marcin.gorny.94@protonmail.com>"]
edition = "2021"
description = "Pure Rust Rabin-Williams implementation"
license = "MIT OR Apache-2.0"
# documentation = "https://docs.rs/rabin-willams"
repository = "https://github.com/mmagician/Rabin-Williams"
keywords = ["signing", "rabin-williams", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
num-bigint = { version = "0.8.0", features = ["i128", "u64_digit", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = { version= "0.2.14", default-features = false, features = ["libm"] }
num-integer = { version = "0.1.44", default-features = false }
num-iter = { version = "0.1.43", default-features = false }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
digest = { version = "0.10.0", default-features = false }
hmac = "0.12.1"
sha2 = { default-features = false, version = "0.10.0" }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0.89"
default-features = false
features = ["derive"]

[dev-dependencies]
base64 = "0.13.0"
hex = "0.4.0"
hex-literal = "0.3.3"
serde_test = "1.0.89"
rand_xorshift = "0.3.0"

[profile.release]
# debug = true

[features]
default = ["std", "pem"]
nightly = ["num-bigint/nightly"]
serde = ["num-bigint/serde", "serde_crate"]
expose-internals = []
std = ["alloc", "digest/std", "rand/std"]
alloc = ["digest/alloc"]
pem = ["alloc"]

[package.metadata.docs.rs]
features = ["std", "pem", "serde"]
rustdoc-args = ["--cfg", "docsrs"]
